--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    return len(restaurant['rating']) < len(alternative[rating])"
+    "    return len(restaurant['rating']) < len([rating])"
    ]
   },
   {
